--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -51,6 +51,10 @@
 
           <!--End mc_embed_signup-->
 
+<a class="twitter-timeline" data-dnt="true" href="https://twitter.com/cyrilcode"  data-widget-id="472373552176324608">Tweets by @cyrilcode</a>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+
 
         </div>
         <div class="col-sm-8">
