attribution for Dan and change twitter link to cyril twitter account

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -70,15 +70,14 @@
           <div class="row">
             <div class="col-sm-6">
               <p class="muted"><small>
-                Darren Mothersele<br />
-                Cyril Live Coding Environment<br />
-                darren@darrenmothersele.com</small>
+                Cyril Live Coding Environment by <a href="http://darrenmothersele.com">Darren Mothersele</a><br />
+                Documentation contributions by <a href="https://twitter.com/danhett">Dan Hett</a>
               </p>
             </div>
             <div class="col-sm-6">
               <p>
-                <a href="https://github.com/darrenmothersele">github.com/darrenmothersele</a><br />
-                <a href="https://twitter.com/mothersele">twitter.com/mothersele</a><br />
+                <a href="https://github.com/darrenmothersele/cyril">github.com/darrenmothersele/cyril</a><br />
+                <a href="https://twitter.com/cyrilcode">twitter.com/cyrilcode</a><br />
               </p>
             </div>
           </div>
